refactor : toList()로 불변 컬렉션 반환하도록 수정